--- a/src/main/webapp/WEB-INF/views/users/index.html
+++ b/src/main/webapp/WEB-INF/views/users/index.html
@@ -8,6 +8,8 @@
 
 <div th:each="person : ${people}">
     <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}">user</a>
+    <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getSurname()}">user</a>
+    <a th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getAge()}">user</a>
 </div>
 </br>
 </br>
