--- a/src/main/webapp/WEB-INF/views/users/edit.html
+++ b/src/main/webapp/WEB-INF/views/users/edit.html
@@ -8,7 +8,11 @@
 
 <form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="name">Enter name: </label>
+    <label for="name">Enter surname: </label>
+    <label for="name">Enter age: </label>
     <input type="text" th:field="*{name}" id="name"/>
+    <input type="text" th:field="*{surname}" id="surname"/>
+    <input type="text" th:field="*{age}" id="age"/>
     <br/>
     <input type="submit" value="Update!"/>
 </form>
