--- a/src/main/webapp/WEB-INF/views/users/new.html
+++ b/src/main/webapp/WEB-INF/views/users/new.html
@@ -8,6 +8,12 @@
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
+    </br>
+    <label for="name">Enter surname: </label>
+    <input type="text" th:field="*{surname}" id="surname"/>
+    </br>
+    <label for="name">Enter age: </label>
+    <input type="text" th:field="*{age}" id="age"/>
     <br/>
     <input type="submit" value="Create!"/>
 </form>
